refactor: extract settings/config constants and align game logic, UI, and tests